# cpp-password-manager

./: .gitignore  CMakeLists.txt  README.md
include/: crypto.h  gui.h  vault.h
resources/: resource.rc
src/: crypto.cpp  gui.cpp  main.cpp  vault.cpp
